fix: scrollbar fixed

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,41 @@
 @tailwind utilities;
 
 * {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    /*border: 1px solid red !important;*/
+}
+
+body {
+    padding: 1rem;
+    background-color: #dededc;
+    /* background-color: #000;*/
+    width: 100vw;
+    height: 95vh;
+    font-family: "Roboto", sans-serif;
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+    display: none;
+}
+
+.contact-bar::-webkit-scrollbar {
+      width: 2px; 
+   }
+
+.contact-bar::-webkit-scrollbar-track {
+    background-color: #f5f5f5;
+  }
+
+.contact-bar::-webkit-scrollbar-thumb {
+    background: #b5b5b5;
+    border-radius: 25px;
+  }
+
+/* Hide scrollbar for IE, Edge and Firefox */
+* {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
 }
